--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -16,7 +16,7 @@
 
 
 <h2>All Fundings</h2>
-<table class="table table-hover">
+<table class="sortable">
   <tr>
     <th>Company</th>
     <th>Funding code</th>
