--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,6 +1,8 @@
+<div class="label">
+    <h3 class= "container">Listing locations</h1>
+</div>
 
 
-<h1>Listing locations</h1>
 
 
 <%= form_tag locations_path, :method => :get do %>
