--- a/app/views/financials/show.html.erb
+++ b/app/views/financials/show.html.erb
@@ -1,9 +1,7 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @financial.name %>
-</p>
+<div class="label">
+    <h3 class= "container"> <%= @financial.name %></h1>
+</div>
 
 <p>
   <b>Perma:</b>
