--- a/app/views/fundings/index.html.erb
+++ b/app/views/fundings/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing fundings</h1>
+<div class="label">
+    <h3 class= "container">Listing fundings</h1>
+</div>
 
 <h2>Total Funding</h2>
 <table class="table table-hover">
