--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,9 +1,4 @@
-
-
-<%@companies.each do |comp| %>
-<%= comp.name %>
-<% end %>
-
+<!-- class="sortable"   for tables!! -->
 <%= form_tag locations_path, :method => :get do %>
   <p>
     <%= label_tag :search, 'Location' %>
@@ -14,65 +9,16 @@
   </p>
 <% end %>
 
-
-<h2>All Fundings</h2>
-<table class="sortable">
-  <tr>
-    <th>Company</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% @fundings.each do |funding| %>
-  <tr>
-    <td><%= funding.company.name %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount %></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-  </tr>
+<!-- links are still broken -->
+<% if params[:search].present? %>
+  <% @fundings.each do |funding| %>
+    <%= link_to "#{funding.funding_date} (#{funding.company.name})" %>
+  <% end %>
+  <% @companies.each do |company| %>
+    <%= link_to company.name %>
+  <% end %>
 <% end %>
-</table>
-
 
 <% if params[:search].present? %>
 <%= render :partial => "map" %>
 <% end %>
-
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Address1</th>
-    <th>Address2</th>
-    <th>Zipcode</th>
-    <th>City</th>
-    <th>Statecode</th>
-    <th>Countrycode</th>
-    <th>Latitude</th>
-    <th>Longitude</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @locations.each do |location| %>
-  <tr>
-    <td><%= location.company.name %></td>
-    <td><%= location.address1 %></td>
-    <td><%= location.address2 %></td>
-    <td><%= location.zipcode %></td>
-    <td><%= location.city %></td>
-    <td><%= location.statecode %></td>
-    <td><%= location.countrycode %></td>
-    <td><%= location.latitude %></td>
-    <td><%= location.longitude %></td>
-    <td><%= link_to 'Show', location %></td>
-    <td><%= link_to 'Edit', edit_location_path(location) %></td>
-    <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-
