--- a/app/views/fundings/index.html.erb
+++ b/app/views/fundings/index.html.erb
@@ -41,6 +41,12 @@
 <% end %>
 </table>
 
+<h2>Top 10, 25, etc. Investors by Date?</h2>
+<br>
+
+<h2>Top 10 Fundings by Date</h2>
+<br>
+
 <h2>Seed Rounds - TBU</h2>
 <table class="table table-hover">
   <tr>
