--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,9 +1,7 @@
+
 <div class="label">
     <h3 class= "container">Listing locations</h1>
 </div>
-
-
-
 
 <%= form_tag locations_path, :method => :get do %>
   <p>
@@ -15,44 +13,16 @@
   </p>
 <% end %>
 
-
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Address1</th>
-    <th>Address2</th>
-    <th>Zipcode</th>
-    <th>City</th>
-    <th>Statecode</th>
-    <th>Countrycode</th>
-    <th>Latitude</th>
-    <th>Longitude</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @locations.each do |location| %>
-  <tr>
-    <td><%= location.company.name %></td>
-    <td><%= location.address1 %></td>
-    <td><%= location.address2 %></td>
-    <td><%= location.zipcode %></td>
-    <td><%= location.city %></td>
-    <td><%= location.statecode %></td>
-    <td><%= location.countrycode %></td>
-    <td><%= location.latitude %></td>
-    <td><%= location.longitude %></td>
-    <td><%= link_to 'Show', location %></td>
-    <td><%= link_to 'Edit', edit_location_path(location) %></td>
-    <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+<!-- links are still broken -->
+<% if params[:search].present? %>
+  <% @fundings.each do |funding| %>
+    <%= link_to "#{funding.funding_date} (#{funding.company.name})" %>
+  <% end %>
+  <% @companies.each do |company| %>
+    <%= link_to company.name %>
+  <% end %>
 <% end %>
-</table>
 
-<br />
-
-<%= link_to 'New Location', new_location_path %>
-
-<!-- If searched -->
+<% if params[:search].present? %>
 <%= render :partial => "map" %>
+<% end %>
