--- a/app/views/locations/_map.html.erb
+++ b/app/views/locations/_map.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
     <style type="text/css">
-      #map-canvas { height: 100%; width: 75%}
+      /*#map-canvas { height: 40%; width: 25%}*/
+      #map-canvas { height: 85%; width: 100%}
     </style>
 
     <script type="text/javascript"
@@ -11,9 +12,17 @@
 
 var location_array = [];
 var company_array =[];
+var industry_array =[];
+var link_array =[];
+var address_array =[];
+
 <% @locations.each do |location| %>
 location_array.push(new google.maps.LatLng(<%=location.latitude %>, <%=location.longitude %>));
 company_array.push("<%=location.company.name %>");
+industry_array.push("<%=location.company.industry.name %>");
+link_array.push("link");
+address_array.push("<%=location.address1 %><br><%=location.zipcode %><br><%=location.city %> (<%=location.statecode %>)<br><%=location.countrycode %>");
+
 <% end %>
 
 
@@ -25,12 +34,13 @@ company_array.push("<%=location.company.name %>");
     function initialize() {
       var mapOptions = {
         zoom: 13,
-        mapTypeId: google.maps.MapTypeId.ROADMAP,
+        mapTypeId: google.maps.MapTypeId.HYBRID,
         center: center_location
       };
 
   map = new google.maps.Map(document.getElementById('map-canvas'),
           mapOptions);
+
 
 
     for (i = 0; i < location_array.length; i++) {
@@ -48,15 +58,13 @@ company_array.push("<%=location.company.name %>");
 
       google.maps.event.addListener(marker, 'click', function(marker, i) {
         return function() {
-          infowindow.setContent(company_array[i]);
+          infowindow.setContent('<h3>' + company_array[i] + '</h3>'+'<h4>(' +  industry_array[i] +')</h4><p>'+ address_array[i] +'</p><a href="#">'+link_array[i]+'</a></p>');
           infowindow.open(map, marker);
         }
       }(marker, i));
 
-
-
-
     }
+
 }
 
 
@@ -64,6 +72,7 @@ company_array.push("<%=location.company.name %>");
 google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
+
 <% end %>
 
-<div id="map-canvas"/>
+<div id="map-canvas" />
