--- a/app/views/financials/index.html.erb
+++ b/app/views/financials/index.html.erb
@@ -9,21 +9,15 @@
     <th>Crunch url</th>
     <th>Home url</th>
     <th>Founded date</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @financials.each do |financial| %>
   <tr>
-    <td><%= financial.name %></td>
+    <td><%= link_to financial.name, financial %></td>
     <td><%= financial.perma %></td>
     <td><%= financial.crunch_url %></td>
     <td><%= financial.home_url %></td>
     <td><%= financial.founded_date %></td>
-    <td><%= link_to 'Show', financial %></td>
-    <td><%= link_to 'Edit', edit_financial_path(financial) %></td>
-    <td><%= link_to 'Destroy', financial, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
