--- a/app/views/individuals/index.html.erb
+++ b/app/views/individuals/index.html.erb
@@ -9,20 +9,14 @@
     <th>Perma</th>
     <th>Crunch url</th>
     <th>Home url</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @individuals.each do |individual| %>
   <tr>
-    <td><%= individual.name %></td>
+    <td><%= link_to individual.name, individual %></td>
     <td><%= individual.perma %></td>
     <td><%= individual.crunch_url %></td>
     <td><%= individual.home_url %></td>
-    <td><%= link_to 'Show', individual %></td>
-    <td><%= link_to 'Edit', edit_individual_path(individual) %></td>
-    <td><%= link_to 'Destroy', individual, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
