--- a/app/views/industries/show.html.erb
+++ b/app/views/industries/show.html.erb
@@ -6,15 +6,17 @@
 <% @industry.companies.each do |f| %>
   <% if f.fundings.present?  %>
         <table class= 'left'>
-        <tr><th colspan="2"><%= link_to f.name, f %></th></tr>
+        <tr><th colspan="3"><%= link_to f.name, f %></th></tr>
         <tr>
         <th>Funding Code</th>
+        <th>Funding Date</th>
         <th>Funding Amount</th>
         </tr>
           <% f.fundings.each do |g|  %>
           <% next unless g.funding_amount.present? %>
           <tr>
             <td><%= g.funding_code %></td>
+            <td><%= g.funding_date %></td>
             <td><%= number_to_currency(g.funding_amount, unit: "$") %></td>
           </tr>
           <% end %>
