Added funding scopes, updated views, funding model

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -38,6 +38,31 @@
   <%= @company.stock_symbol %>
 </p>
 
+<h2>All Investments</h2>
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Date</th>
+    <th>Round</th>
+    <th>Amount</th>
+    <th>Industry</th>
+    <th>City</th>
+  </tr>
+
+<% Funding.for_company(@company.id).order("funding_date DESC").each do |f| %>
+  <tr>
+    <td><%= f.company.name %></td>
+    <td><%= f.funding_date %></td>
+    <td><%= f.funding_code %></td>
+    <td><%= f.funding_amount %></td>
+    <td><%= f.company.industry.name %></td>
+    <td><%= f.company.location.city %></td>
+
+  </tr>
+<% end %>
+</table>
+
+
 
 <%= link_to 'Edit', edit_company_path(@company) %> |
 <%= link_to 'Back', companies_path %>
