--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -2,67 +2,72 @@
 <div class="label">
     <h3 class= "container"> <%= @company.name %></h1>
 </div>
+<div class="container group">
 
-<p>
-  <b>Perma:</b>
-  <%= @company.perma %>
-</p>
+  <div class="grid_8">
+    <p>
+      <b>Perma:</b><br>
+      <%= @company.perma %>
+    </p>
+    
+    <p>
+      <b>Industry:</b><br>
+      <%= @company.industry_id %>
+    </p>
+    
+    <p>
+      <b>Crunch url:</b><br>
+      <%= @company.crunch_url %>
+    </p>
+    
+    <p>
+      <b>Home url:</b><br>
+      <%= @company.home_url %>
+    </p>
+    
+    <p>
+      <b>Founded date:</b><br>
+      <%= @company.founded_date %>
+    </p>
+    
+    <p>
+      <b>Dead date:</b><br>
+      <%= @company.dead_date %>
+    </p>
+    
+    <p>
+      <b>Stock symbol:</b><br>
+      <%= @company.stock_symbol %>
+    </p>
+  </div>
 
-<p>
-  <b>Industry:</b>
-  <%= @company.industry_id %>
-</p>
-
-<p>
-  <b>Crunch url:</b>
-  <%= @company.crunch_url %>
-</p>
-
-<p>
-  <b>Home url:</b>
-  <%= @company.home_url %>
-</p>
-
-<p>
-  <b>Founded date:</b>
-  <%= @company.founded_date %>
-</p>
-
-<p>
-  <b>Dead date:</b>
-  <%= @company.dead_date %>
-</p>
-
-<p>
-  <b>Stock symbol:</b>
-  <%= @company.stock_symbol %>
-</p>
-
-<h2>All Investments</h2>
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Date</th>
-    <th>Round</th>
-    <th>Amount</th>
-    <th>Industry</th>
-    <th>City</th>
-  </tr>
-
-<% Funding.for_company(@company.id).order("funding_date DESC").each do |f| %>
-  <tr>
-    <td><%= f.company.name %></td>
-    <td><%= f.funding_date %></td>
-    <td><%= f.funding_code %></td>
-    <td><%= f.funding_amount %></td>
-    <td><%= f.company.industry.name %></td>
-    <td><%= f.company.location.city %></td>
-
-  </tr>
-<% end %>
-</table>
-
-
-
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+  <div class="grid_16">
+    <h3 class="center">All Investments</h3>
+    <table>
+      <tr>
+        <th>Company</th>
+        <th>Date</th>
+        <th>Round</th>
+        <th>Amount</th>
+        <th>Industry</th>
+        <th>City</th>
+      </tr>
+    
+    <% Funding.for_company(@company.id).order("funding_date DESC").each do |f| %>
+      <tr>
+        <td><%= f.company.name %></td>
+        <td><%= f.funding_date %></td>
+        <td><%= f.funding_code %></td>
+        <td><%= f.funding_amount %></td>
+        <td><%= f.company.industry.name %></td>
+        <td><%= f.company.location.city %></td>
+    
+      </tr>
+    <% end %>
+    </table>
+  </div>
+  
+  
+  <%= link_to 'Edit', edit_company_path(@company) %> |
+  <%= link_to 'Back', companies_path %>
+ </div> 
