--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing company</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @company %> |
-<%= link_to 'Back', companies_path %>
+<div class="label">
+	<h3 class="container">Editing company</h3>
+</div>
+<div class="container">
+	<%= render 'form' %>
+	
+	<%= link_to 'Show', @company %> |
+	<%= link_to 'Back', companies_path %>
+</div>
