--- a/app/views/financials/index.html.erb
+++ b/app/views/financials/index.html.erb
@@ -2,9 +2,10 @@
     <h3 class= "container">Listing financials</h1>
 </div>
 
-<table>
+<table class= "sortable">
   <tr>
     <th>Name</th>
+    <th>Total Investments</th>
     <th>Perma</th>
     <th>Crunch url</th>
     <th>Home url</th>
@@ -14,6 +15,7 @@
 <% @financials.each do |financial| %>
   <tr>
     <td><%= link_to financial.name, financial %></td>
+    <td><%= number_to_currency(financial.total_investments, unit: "$") %></td>
     <td><%= financial.perma %></td>
     <td><%= financial.crunch_url %></td>
     <td><%= financial.home_url %></td>
