--- a/app/views/financials/show.html.erb
+++ b/app/views/financials/show.html.erb
@@ -3,8 +3,12 @@
     <h3 class= "container"> <%= @financial.name %> | <%= link_to "Crunchbase Profile", @financial.crunch_url %> | <%= link_to "Home Page", @financial.home_url %> | Founded: <%= @financial.founded_date %></h3>
 </div>
 
+<% company_array=[] %>
+<% fcode_array=[] %>
+<% industry_array=[] %>
+
 <h2>Recent Investments</h2>
-<table>
+<table class= "sorttable">
   <tr>
     <th>Company</th>
     <th>Date</th>
@@ -39,29 +43,4 @@
 <br>
 
 
-
-
-
-<h2>All Investments</h2>
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Date</th>
-    <th>Round</th>
-    <th>Amount</th>
-    <th>Industry</th>
-    <th>City</th>
-  </tr>
-
-<% Funding.for_financial(@financial.id).order("funding_date DESC").each do |f| %>
-  <tr>
-    <td><%= f.company.name %></td>
-    <td><%= f.funding_date %></td>
-    <td><%= f.funding_code %></td>
-    <td><%= f.funding_amount %></td>
-    <td><%= f.company.industry.name %></td>
-    <td><%= f.company.location.city %></td>
-
-  </tr>
-<% end %>
-</table>
+<%= render :partial => 'fundings/funding_show', locals: {fundings: Funding.for_financial(@financial.id)} %>
