--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -9,32 +9,32 @@
       <b>Perma:</b><br>
       <%= @company.perma %>
     </p>
-    
+    <p>&nbsp;</p>
     <p>
       <b>Industry:</b><br>
       <%= @company.industry_id %>
     </p>
-    
+    <p>&nbsp;</p>
     <p>
       <b>Crunch url:</b><br>
       <%= @company.crunch_url %>
     </p>
-    
+    <p>&nbsp;</p>
     <p>
       <b>Home url:</b><br>
       <%= @company.home_url %>
     </p>
-    
+    <p>&nbsp;</p>
     <p>
       <b>Founded date:</b><br>
       <%= @company.founded_date %>
     </p>
-    
+    <p>&nbsp;</p>
     <p>
       <b>Dead date:</b><br>
       <%= @company.dead_date %>
     </p>
-    
+    <p>&nbsp;</p>
     <p>
       <b>Stock symbol:</b><br>
       <%= @company.stock_symbol %>
